# CG2Assignment3Qt

./: .gitignore  Assignment3Qt.sln  CMakeLists.txt  README.md  conanfile.txt  scene - closest.txt  sceneData - RoomBall.txt  sceneData.txt
Assignment3Qt/: Assignment3Qt.vcxproj  Assignment3Qt.vcxproj.filters  OpenGL.props  Utils.h  assignment3qt.cpp  assignment3qt.h  assignment3qt.qrc  assignment3qt.ui  geometryObject.cpp  geometryObject.h  lightSource.cpp  lightSource.h  main.cpp  quadTree.cpp  quadTree.h  rayTracingCamera.cpp  rayTracingCamera.h  spaceKDTree.cpp  spaceKDTree.h
Assignment3Qt/GeneratedFiles/: qrc_assignment3qt.cpp  ui_assignment3qt.h
resources/: scene - further.txt
src/: GeometryObject.cpp  GeometryObject.h  KDTree.cpp  KDTree.h  Kdtree.cpp  Kdtree.h  LightSource.cpp  LightSource.h  MainWindow.cpp  MainWindow.h  NumberWidget.h  QuadTree.cpp  QuadTree.h  RayTracingCamera.cpp  RayTracingCamera.h  Type.h  Utils.h  VectorWidget.h  main.cpp
